just need to switch some photos

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -51,6 +51,7 @@
                     <a href="{{ url_for('ceremony') }}">Ceremony</a>
                     <a href="{{ url_for('party') }}">Party</a>
                     <a href="{{ url_for('hotel') }}">Hotel</a>
+                    <a href="{{ url_for('around_town') }}">Things to Do Around Town</a>
                     <a href="mailto:us@liz-and-meg.com">Send us a message 💌</a>
                 </div>
             <a href="javascript:void(0);" class="icon" onclick="openMenu()">
