--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -19,7 +19,7 @@
       body {
         height: 100vh;
         margin: 0px;
-        background-image: url('https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/ipad.jpg');
+        background-image: url('https://lizmegmobile.s3.us-east-2.amazonaws.com/IMG-20190704-100728449.jpg');
         -webkit-background-size: 100%; 
         -moz-background-size: 100%; 
         -o-background-size: 100%; 
@@ -34,7 +34,7 @@
       body {
         height: 100vh;
         margin: 0px;
-        background-image: url('https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/iphonex.jpg');
+        background-image: url('https://lizmegmobile.s3.us-east-2.amazonaws.com/IMG-20190704-100728449.jpg');
         -webkit-background-size: 100%; 
         -moz-background-size: 100%; 
         -o-background-size: 100%; 
