--- a/app/templates/party.html
+++ b/app/templates/party.html
@@ -2,10 +2,15 @@
 
 {% block body %}
 <section class="party">
-<p>
-The reception will be held at 
-The Loudoun House, 209 Castlewood Dr, Lexington, KY 40505
-September 18, 2021 at 6pm
-</p>
+<h3 style="display:flex;justify-content:center;">September 18, 2021 @ 6:00pm</h3>
+<h3 style="display:flex;justify-content:center;">The reception will be held at:</h3>
+<address style="font-style:normal;display:flex;justify-content:center;color:white;">
+  The Loudoun House <br>
+  
+  209 Castlewood Dr <br>
+  Lexington, KY 40505 <br>
+</address>
+
+<img class="loudoun" src="https://lizmegmobile.s3.us-east-2.amazonaws.com/loudoun.jpg">
 </section>
 {% endblock %}
