--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -72,6 +72,18 @@ p {
   padding-top: 20px
 }
 
+ul {
+  margin-left: 0px;
+  padding-left: 0px;
+}
+
+li {
+  display: block;
+  margin-left: 8px;
+  margin-right: auto;
+  color: white;
+}
+
 br {
   line-height: 20px;
 }
@@ -86,6 +98,13 @@ section {
   max-width: 1200px;
   border: solid violet;
   border-radius: 30px;
+}
+
+.loudoun {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 }
 
 .hotels_grid {
@@ -218,6 +237,14 @@ section {
     padding-right: 5px;
   }
 
+  .around_town {
+    padding-top: 8px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    padding-left: 8px;
+    padding-right: 5px;
+  }
+
   .main {
     padding-top: 8px;
     margin-top: 8px;
@@ -226,5 +253,11 @@ section {
     padding-right: 5px;
 
   }
-
+  .loudoun {
+    display:flex;
+    justify-content:center;
+    max-width:100%;
+    height:auto;
+    margin-bottom:10px;
+  }
 }
