--- a/app/templates/around_town.html
+++ b/app/templates/around_town.html
@@ -2,37 +2,49 @@
 
 {% block body %}
 <section class="around_town">
-<p>
-Coffee
-</p>
 
-<p>
-Breakfast
-</p>
+<ul><h3>Coffee:</h3>
+<li><a href="https://manchestercoffeeco.com/">- Manchester Coffee Co</a> (hipsters)</li>
+<li><a href="https://www.thirdststuff.com/">- Third Street Coffee </a>(hippies)</li>
+<li><a href="https://broomwagonbikes.com/">- Broom Wagon </a>(bikes and good snacks)</li>
+</ul>
 
-<p>
-Lunch
-</p>
+<ul><h3>Breakfast:</h3>
+<li><a href="https://www.stellaskentuckydeli.com/">- Stella's</a>Great Brunch</li>
+<li><a href="https://www.windycornermarket.com/">- Windy Corner</a>Further out from town, but great</li>
+<li><a href="https://wildeggs.com/">- Wild Eggs</a></li>
+</ul>
 
-<p>
-Dinner
-</p>
+<ul><h3>Lunch/Dinner:</h3>
+<li><a href="https://smithtownseafood.com/">- Smithtown Seafood at West 6th Brewery</a></li>
+<li><a href="https://www.middleforkkb.com/">- Middle Fork</a>Call ahead/get a reservation!</li>
+<li><a href="https://g.page/marias805?share">- Maria's</a>Great Mexican food</li>
+</ul>
 
-<p>
-Bourbon
-</p>
+<ul><h3>Bourbon:</h3>
+<li><a href="https://kybourbontrail.com/">- Bourbon Trail Tour</a></li>
+<li><a href="https://www.woodfordreserve.com/our-distillery/tour-our-distillery/">- Woodford Reserve</a></li>
+<li><a href="http://bellesbar.com/">- Belle's Cocktail House</a></li>
+</ul>
 
-<p>
-Desserts
-</p>
+<ul><h3>Desserts:</h3>
+<li><a href="https://martinespastries.com/">- Martine's Pastries</a> | Sells cake by the slice and lots of other cafe items</li>
+<li><a href="https://crankandboom.com/">- Crank & Boom</a> | We won a year's worth of this ice cream and didn't get sick of it. Get something with BOMB SAUCE!</li>
+<li><a href="https://goo.gl/maps/KKVCB1zKGjoAQpRb9">- Frank's Donuts</a> | A lighter, airier donut. Multiple locations, Downtown linked</li>
+<li><a href="https://www.northlime.net/">- North Lime Donuts</a> | Yeasted donuts. So good. Get the chocolate glazed. Seriously.</li>
+</ul>
 
-<p>
-Shops
-</p>
+<ul><h3>Shopping:</h3>
+<li><a href="https://www.lexingtonfarmersmarket.com/saturday/">- Lexington Farmer's Market</a> | Saturday mornings/early afternoon Downtown</li>
+<li><a href="https://sqecial.com/">- sQecial Media</a> | Old college campus headshop with lots of fun gifts</li>
+<li><a href="https://thesummitatfritzfarm.com/">- The Summit</a> | Many shops all located as an outdoor mall</li>
+</ul>
 
-<p>
-Outdoors
-</p>
+<ul><h3>Outdoors:</h3>
+<li><a href="https://www.lexingtonky.gov/legacy-trail">- The Legacy Trail</a> | Greenway from Downtown Lexington to the Kentucky Horsepark</li>
+<li><a href="https://www.lexingtonky.gov/mcconnell-springs-park">- McConnell's Springs</a> | McConnell Springs is a 26-acre natural pocket within an industrial area</li>
+<li><a href="https://www.oldfriendsequine.org/">- Old Friends</a> | Thoroughbred Retirement Farm - reservations required</li>
+</ul>
 
 </section>
 {% endblock %}
