switched photos but need to adjust

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
     body {
       height: 100vh;
       margin: 0px;
-      background-image: url('https://photos-liz-and-meg.s3.us-east-2.amazonaws.com/Liz+and+Meg+Dec+2020/post-ceremony/File_087.jpeg');
+      background-image: url('https://lizmegmobile.s3.us-east-2.amazonaws.com/31FBEB46-0032-4BF3-B93A-804671AE6363_1_105_c.jpeg');
       -webkit-background-size: 100%; 
       -moz-background-size: 100%; 
       -o-background-size: 100%; 
@@ -19,7 +19,7 @@
       body {
         height: 100vh;
         margin: 0px;
-        background-image: url('https://lizmegmobile.s3.us-east-2.amazonaws.com/IMG-20190704-100728449.jpg');
+        background-image: url('https://lizmegmobile.s3.us-east-2.amazonaws.com/4CD2EDAE-C983-415B-A309-E47E8373A58B_1_105_c.jpeg');
         -webkit-background-size: 100%; 
         -moz-background-size: 100%; 
         -o-background-size: 100%; 
@@ -34,7 +34,7 @@
       body {
         height: 100vh;
         margin: 0px;
-        background-image: url('https://lizmegmobile.s3.us-east-2.amazonaws.com/IMG-20190704-100728449.jpg');
+        background-image: url('https://lizmegmobile.s3.us-east-2.amazonaws.com/4CD2EDAE-C983-415B-A309-E47E8373A58B_1_105_c.jpeg');
         -webkit-background-size: 100%; 
         -moz-background-size: 100%; 
         -o-background-size: 100%; 
