--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -45,7 +45,7 @@
 
         <!-- Top Navigation Menu -->
         <div class="topnav">
-            <a href="#home" class="logo">liz & meg.</a>
+            <a href="javascript:void(0);" class="logo" onclick="openMenu()">liz & meg.</a>
                 <div id="links">
                     <a href="{{ url_for('index') }}">Home</a>
                     <a href="{{ url_for('ceremony') }}">Ceremony</a>
