added honeyfund details

--- a/app/templates/hotel.html
+++ b/app/templates/hotel.html
@@ -25,6 +25,15 @@
       <p>Last day to book: Aug 20</p>
     </div>
 
+    <div class="hotel" >
+      <h4>If you want to rent an Airbnb:</h4>
+      <h5>Convenient Neighborhoods</h5>
+      <p>Kenwick</p>
+      <p>Chevy Chase</p>
+      <p>Castlewood</p>
+      <p>Ashland Park</p>
+    </div>
+
   </div>
 </section>
 {% endblock %}
