--- a/app/templates/party.html
+++ b/app/templates/party.html
@@ -12,5 +12,14 @@
 </address>
 
 <img class="loudoun" src="https://lizmegmobile.s3.us-east-2.amazonaws.com/loudoun.jpg">
+
+<h3 style="display:flex;justify-content:center;">Are we registered?</h3>
+<p style="display:block;justify-content:center;">We don't expect gifts at all! <br>
+If you'd still like to gift something, we are always doing house projects and can use Home Depot or Lowes gift cards. <br>
+We are also going to Colorado and New Mexico on our honeymoon, 
+and contributions to our <a class="shown_link" href="https://www.honeyfund.com/wedding/toole-pantalone-09-18-2021">Honeyfund</a> are greatly appreciated.
+</p>
+<br>
 </section>
+
 {% endblock %}
